assets/css/style-new.css
/* ... */
@media screen and (max-width: 540px) {

   /* .loading-container .loading-words h2 {
      padding-left: 0;
   } */

   /* .loading-container .dot {
      display: none;
   } */

   .loading-container .dot {
      top: 42%;
   }
}


/* ------------------------- Top Bar -------------------------------------------------- */

.nav-bar {
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   background: transparent;
   z-index: 5;
   transform: translate(0, 0) rotate(0.001deg);
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: calc(var(--gap-padding) / 2) calc(var(--gap-padding) / 2);
}

/* Contact Us: brand color */
.nav-bar .links-wrap .btn-link.btn-contact .btn-text-inner {
   color: #F9460E;
}

@media screen and (max-width: 540px) {

   .nav-bar {
      padding: calc(var(--gap-padding) / 1) calc(var(--gap-padding) * .5) calc(var(--gap-padding) / 1) calc(var(--gap-padding) * .33);
   }

   .nav-bar .links-wrap li {
      display: none;
   }

   /* Show the hamburger from the start on mobile (nav links are hidden) */
   .btn-hamburger {
      transform: translateY(0%) scale(1) rotate(0.001deg);
   }
}

/* ------------------------- Fixed Nav -------------------------------------------------- */

.fixed-nav-back {
   background: linear-gradient(to right, hsla(220, 13%, 0%, .3) 40%, hsla(220, 13%, 0%, 1) 80%);
   opacity: 0;
   transition: opacity .8s cubic-bezier(.7, 0, .2, 1);
   z-index: 100;
   pointer-events: none;
   will-change: opacity;
}

.nav-active .fixed-nav-back {
   opacity: .35;
   pointer-events: all;
}

.fixed-nav {
   position: fixed;
   right: 0;
   top: 0;
   height: 100vh;
   background: var(--color-dark);
   z-index: 100;
   transform: translate(calc(100% + 6vw), 0) rotate(0.001deg);
   transition: transform .8s cubic-bezier(.7, 0, .2, 1);
   will-change: transform;
}

.nav-active .fixed-nav {
   transform: translate(0, 0) rotate(0.001deg);
}

.fixed-nav-inner {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   height: 100%;
   padding: 15vh 7.5vw 10vh 7.5vw;
   position: relative;
   transform: translate(0, 0) rotate(0.001deg);
   transition: all .6s cubic-bezier(.7, 0, .2, 1);
   will-change: transform;
}

.nav-active .fixed-nav-inner {
   transform: translate(0, 0) rotate(0.001deg);
}

.fixed-nav .nav-row h5 {
   margin-bottom: 3em;
}

.fixed-nav .nav-row ul {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
   padding-top: 5vh;
}

.fixed-nav .nav-row .btn-link .btn-click {
   height: auto;
}

.fixed-nav .nav-row ul {
   margin-left: calc(var(--gap-padding) / -2);
}

.fixed-nav .nav-row .btn-text-inner {
   font-size: 3.5em;
   line-height: 1.4;
   font-size: calc(clamp(3.25em, 5vw, 4em) * .875);
}

.fixed-nav .nav-row .btn-link .btn-click::after {
   background: var(--color-white);
   left: calc(var(--gap-padding) / -4);
   top: 50%;
   bottom: auto;
   width: calc(clamp(16px, 1.2vw, 19px) / 1.65);
   height: calc(clamp(16px, 1.2vw, 19px) / 1.65);
}

.fixed-nav .social-row {
   margin-left: calc(var(--gap-padding) / -4);
}

.fixed-nav-rounded-div {
   position: absolute;
   left: 1px;
   transform: translateX(-100%);
   height: 100%;
   top: 0;
}

.fixed-nav-rounded-div .rounded-div-wrap {
   width: 6vw;
   height: 100%;
   transition: var(--animation-slow);
   transition: all .85s cubic-bezier(.7, 0, .2, 1);
   will-change: width;
}

.nav-active .fixed-nav-rounded-div .rounded-div-wrap {
   width: 0vw;
}

.fixed-nav-rounded-div .rounded-div-wrap .rounded-div {
   background: var(--color-dark);
   height: 150%;
   content: "";
   display: block;
   position: absolute;
   width: 775%;
   top: 50%;
   border-radius: 50%;
   transform: translate(-6.5%, -50%);
}

.fixed-nav .nav-row ul .btn {
   transform: translate(15vw, 0) rotate(0.001deg);
   transition: all .8s cubic-bezier(.7, 0, .2, 1);
   will-change: transform;
}

.nav-active .fixed-nav .nav-row ul .btn {
   transform: translate(0, 0) rotate(0.001deg);
}

.fixed-nav .nav-row ul .btn:nth-child(2) {
   transition-delay: .03s;
}

.fixed-nav .nav-row ul .btn:nth-child(3) {
   transition-delay: .06s;
}

.fixed-nav .nav-row ul .btn:nth-child(4) {
   transition-delay: .09s;
}

.fixed-nav .social-row .stripe {
   display: none;
}

@media screen and (max-height: 680px) {
   .fixed-nav .nav-row .btn-text-inner {
      font-size: 3em;
      line-height: 1.25;
   }
}
/* ... */

